@@ -522,6 +522,7 @@ LocalSettings.php. The specific bugs are listed below in the general notes.
 * (bug 25741) Add more data to list=search's srprop
 * (bug 25760) counter property still reported by the API when
   $wgDisableCounters enabled
+* (bug 25987) prop=info&inprop=watched now also works for missing pages
 
 === Languages updated in 1.17 ===
 
